# seanox-ai-podcast

./: README.md  pyproject.toml  setup.py
2026/04/Minimalismus als Design- und Architektur-Entscheidung/: podcast.yaml
examples/Minimalismus als Design- und Architektur-Entscheidung/: podcast.yaml
podcasts/Minimalismus als Design- und Architektur-Entscheidung/: podcast.yaml
seanox_ai_podcast/: __init__.py  pipeline.py  structure.py
seanox_ai_podcast/modules/: __init__.py  abstract.py  generativelanguage_googleapis_com.py  texttospeech_googleapis_com.py
