[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seanox-ai-podcast"
version = "1.0.0.0"
description = "Podcast generation pipeline using a YAML-defined structure and external Text-To-Speech APIs."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Seanox Software Solutions"}]
requires-python = ">=3.10"
keywords = [
    "podcast", "pipeline", "text-to-speech", "yaml"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent"
]

dependencies=[
    "PyYAML",
    "Jinja2",
    "numpy",
    "requests",
    "jmespath",
]

[project.urls]
Homepage = "https://github.com/seanox/seanox-ai-podcast"
Issues = "https://github.com/seanox/seanox-ai-podcast/issues"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]